# GentryMatrixImplCpp

./: CMakeLists.txt
docs/: google_perf.md
include/: CRT.hpp  GentryPoly.hpp  PlaintextPoly.hpp  complecx_matrix.hpp  flints.hpp  math_utils.hpp  matmul.hpp  modops.hpp  montgomery.hpp  ntt.hpp  random.hpp  twisted_ntter.hpp  u64_array.hpp  uint64.hpp  vec64.hpp  ziq_array.hpp
include/FHE/: circledast.hpp  circledast_ct.hpp  encrypt.hpp  encrypt64.hpp  encrypt_gp.hpp  key_switch.hpp  key_switch_64.hpp  key_switch_gp.hpp
include/GPU/: cuda_buffer.hpp  cuda_check.hpp  cuda_matmul.hpp  cuda_modops.cuh  cuda_ntt.hpp  cuda_u64_ctx_ops.hpp
include/constant_modulo/: mod_int.hpp
src/: CRT.cpp  convert.cpp  fmpz_vector.cpp  math_utils.cpp  matmul.cpp  modops.cpp  montgomery.cpp  random.cpp  uint64.cpp  vec64.cpp  ziq_array.cpp  ziq_ctx.cpp
src/FHE/: circledast_ct.cpp  create_ksks.cpp  encrypt.cpp  encrypt64.cpp  encrypt_gp.cpp  key_switch.cpp
src/FHE/KS64/: Base.cpp  CRT.cpp
src/FHE/KSGP/: key_switch_gp.cpp
src/FHE/circledast/: circledast_ct.cpp  (+1 more)
src/GPU/: cuda_buffer.cu  cuda_matmul_mont.cu  cuda_ntt.cu
src/GentryPoly/: GPCCtx.cpp
src/complex_matrix/: complex_matrix.cpp  convert.cpp  encode.cpp  factories.cpp  matmul.cpp  random.cpp
src/math_utils/: findPrimitiveRoot.cpp
src/ntt/: ntt64.cpp  ntt_basic.cpp  ntt_i.cpp  ntt_standard.cpp  ntt_w.cpp  ntt_xy.cpp  rader64.cpp  standard.cpp  twisted_w.cpp  twisted_xy.cpp
src/transpose/: inplace.cpp  rect.cpp  restrict.cpp
src/u64_array/: crt_array.cpp  factories.cpp  mod_by_modulo.cpp  mod_reduce.cpp  ntt_w.cpp  ntt_xy.cpp  transforms.cpp  u64_ctx.cpp  u64_ctx_chain.cpp  u64_ctx_cuda_ops.cpp
tests/: main.cpp
tests/FHE/: main.cpp  main_ks.cpp  test_circledast_ct.cpp  test_enc.cpp
tests/FHE64/: main.cpp  test_enc64.cpp  test_ks64B.cpp  test_ks64C.cpp
tests/basics/: main.cpp  test_circledast.cpp  test_crt.cpp  test_ntt_64.cpp  test_ntt_standard.cpp  test_ntt_standard_with_ctx.cpp  test_ntt_w.cpp  test_ntt_xy.cpp  test_polymul.cpp  test_ziq_ctx.cpp
tests/bench/: bench_circledast.cpp  bench_circledast_ct.cpp  bench_ks.cpp  bench_ntt.cpp  main.cpp
tests/bench64/: main.cpp  test_all.cpp  test_ks64.cpp  test_matmul.cpp
tests/ct_circledast/: main.cpp  test_ct_circledast.cpp
tests/cuda/: main.cpp
tests/encode/: main.cpp
tests/experiment/: main.cpp
tests/gpctest/: main.cpp  test_circledast.cpp  test_encrypt.cpp  test_ks.cpp  test_ntt.cpp
tests/random/: main.cpp
tests/test_all/: main.cpp
(+32 files in other folders)
